data/derived/comb/progs/unify/prog8876.ml.out
Characters 94-95:
  if k = f then s h else assoc d k t;;
                  ^
Error: This expression has type 'a * ('b -> 'c)
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a * ('b -> 'c)
